<resources>
    <string name="app_name">eVote</string>
    <string name="skip_page">Skip</string>
    <string name="log_out">Log Out</string>
    <string name="For_voters">Vote Here</string>
    <string name="create_poll">Create Poll</string>
    <string name="clients_name_dilog">clients_name_dilog</string>
    <string name="agents_dialog_box_msg">agents_dialog_box_msg</string>
    <string name="name">name</string>
    <string name="logoimagedialogbox">logoimagedialogbox</string>
    <string name="cancel_client_dialog">cancel_client_dialog</string>
    <string name="ok_client_dialog">ok_client_dialog</string>
    <string name="clients_dialog_box_msg">clients_dialog_box_msg</string>
    <string name="poll_creators">Poll Creators</string>
    <string name="your_name">Your Name *</string>
    <string name="organisation_name">Organisation Name</string>
    <string name="organisation">Organisation *</string>
    <string name="cancel_poll_creator">Cancel</string>
    <string name="save_poll_creator">Save</string>
    <string name="add_candidates">Add Candidates</string>
    <string name="submit_candidate_list">Submit Candidate List</string>
    <string name="candidate_name">Candidate Name</string>
    <string name="removebutton">removeButton</string>
    <string name="vote_count">vote count</string>
    <string name="add_candidates_button">Add</string>
    <string name="post_vote">Post</string>
    <string name="the_post_for_which_this_voting_is_being_carried_out">The post for which this voting is being carried out.</string>
    <string name="secret_code_to_be_shared_with_the_voters">SECRET CODE TO BE SHARED WITH THE VOTERS</string>
    <string name="please_share_the_secret_code_with_all_your_voters_or_they_won_t_be_able_to_vote">Please share the secret code with all your voters or they cannot vote.Note down the secret code as this will get vanished once you close our app.</string>
    <string name="importantstar">importantStar</string>
    <string name="for_voters">For Voters</string>
    <string name="company_voting_id">Company Id *</string>
    <string name="secret_code_star">Secret Code *</string>
    <string name="secret_code">Secret Code</string>
    <string name="employee_id_star">Employee Id *</string>
    <string name="employee_id_hint">Employee Id</string>
    <string name="submit_vote">Submit Vote</string>
    <string name="voting_button">Voting Button</string>
    <string name="vote_for">Vote For :</string>
    <string name="please_write_the_name_you_want_to_vote_for">Please write the name you want to vote for :</string>
    <string name="check_winner">Check Winner</string>
    <string name="verify_voters_details">Verify Voters Details</string>
    <string name="Share">shareWinner</string>
    <string name="sharewinner">shareWinner</string>
    <string name="winners_name">Winners Name</string>
    <string name="searchwinner">searchWinner</string>
    <string name="enter_secret_code">Enter Secret Code</string>
    <string name="welcome">WELCOME</string>
    <string name="number_of_candidates">number of candidates</string>
    <string name="back">back</string>
    <string name="voters_details">Voters Details</string>
    <string name="help">Help</string>
    <string name="description">description</string>
</resources>
