<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WinnerActivity"
    android:background="@drawable/ic_background">

    <EditText
        android:id="@+id/secretEditTextCodeWinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="7 digit Secret Code"
        android:ems="10"
        android:hint="@string/enter_secret_code"
        android:inputType="textPersonName"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.144" />

    <EditText
        android:id="@+id/secretEditTextTotalCandidate"
        android:layout_width="86dp"
        android:layout_height="53dp"
        android:autofillHints="7 digit Secret Code"
        android:ems="10"
        android:hint="@string/number_of_candidates"
        android:inputType="textPersonName"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.704"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.146" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="59dp"
        android:layout_height="48dp"
        android:background="@android:color/holo_orange_dark"
        android:contentDescription="@string/searchwinner"
        android:onClick="searchWinner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.898"
        app:layout_constraintStart_toEndOf="@+id/secretEditTextCodeWinner"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.142"
        app:srcCompat="@android:drawable/ic_menu_search" />

    <TextView
        android:id="@+id/textViewWinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/winners_name"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/welcome"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secretEditTextCodeWinner"
        app:layout_constraintVertical_bias="0.158" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="229dp"
        android:layout_height="55dp"
        android:background="@android:color/holo_orange_dark"
        android:contentDescription="@string/sharewinner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="sendWinnerName"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewWinner"
        app:layout_constraintVertical_bias="0.58"
        app:srcCompat="@android:drawable/ic_menu_share" />
</androidx.constraintlayout.widget.ConstraintLayout>
