<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:background="@android:color/holo_orange_dark">

    <EditText
        android:id="@+id/edit_candidate_name"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="5dp"
        android:background="@android:color/holo_orange_light"
        android:layout_weight="1"
        android:hint="@string/candidate_name"
        android:textSize="14sp"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_width="0dp"
        android:layout_height="40dp"
        tools:ignore="RtlSymmetry"
        android:autofillHints="Name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edit_vote_count"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp"
        android:autofillHints="Number"
        android:layout_weight="1"
        android:background="@android:color/holo_orange_light"
        android:hint="@string/vote_count"
        android:inputType="number"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        tools:ignore="RtlSymmetry" />

    <ImageView
        android:id="@+id/image_remove"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_gravity="center_vertical"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
        android:contentDescription="@string/removebutton" />

</LinearLayout>
