<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PollCreatorsPage"
    android:background="@drawable/ic_background"
    android:scrollbars="vertical">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="134dp"
        android:layout_height="139dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.511"
        app:lottie_autoPlay="true"
        app:lottie_fileName="data.json"
        app:lottie_loop="true"
        app:lottie_url="REPLACE_JSON_URL" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20sp"
        android:layout_marginBottom="100sp"
        android:scrollbars="vertical|horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:verticalScrollbarPosition="left"
            android:background="@android:color/holo_orange_dark"
            android:orientation="vertical"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:text="@string/add_candidates"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold|italic" />

                <LinearLayout
                    android:id="@+id/layout_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />

                <Button
                    android:id="@+id/button_add"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/holo_orange_light"
                    android:drawableEnd="@drawable/ic_add"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/add_candidates_button"
                    android:textSize="15sp"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:backgroundTint="#FF9100" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="15dp"
                    android:orientation="horizontal"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/post_vote"
                        android:textColor="@android:color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/postEdit"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginBottom="5dp"
                        android:autofillHints="Post"
                        android:background="@android:color/holo_orange_light"
                        android:hint="@string/the_post_for_which_this_voting_is_being_carried_out"
                        android:inputType="text"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        tools:ignore="LabelFor" />
                </LinearLayout>

                <Button
                    android:id="@+id/button_submit_list"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="15dp"
                    android:background="@android:color/holo_orange_light"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/submit_candidate_list"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:backgroundTint="#FF3D00"
                    tools:ignore="UsingOnClickInXml" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/impText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:gravity="center"
        android:text="@string/please_share_the_secret_code_with_all_your_voters_or_they_won_t_be_able_to_vote"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.723" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:padding="20sp"
        app:cardCornerRadius="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <TextView
            android:id="@+id/secretTextCode"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:hint="@string/secret_code_to_be_shared_with_the_voters"
            android:textSize="18sp"
            android:textStyle="italic" />
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:onClick="shareCode"
        android:background="@android:color/holo_orange_dark"
        android:contentDescription="@string/importantstar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/impText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.172"
        app:srcCompat="@android:drawable/ic_menu_share" />

    <Button
        android:id="@+id/buttonWinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_winner"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="winner"
        app:layout_constraintStart_toEndOf="@+id/animationView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.291" />

    <Button
        android:id="@+id/buttonVerify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_voters_details"
        android:onClick="checkDetails"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/animationView"
        app:layout_constraintTop_toBottomOf="@+id/buttonWinner" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="70dp"
        android:layout_height="41dp"
        android:background="#000000"
        android:contentDescription="@string/back"
        android:tint="#FFFFFF"
        android:onClick="backMe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2"
        app:srcCompat="@android:drawable/ic_menu_revert"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>
