<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:verticalScrollbarPosition="defaultPosition"
    tools:context=".VerifyVoterDetails"
    android:background="@drawable/ic_background">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20sp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="100sp"
        android:scrollbars="vertical|horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:verticalScrollbarPosition="left"
            android:background="@android:color/holo_orange_dark"
            android:orientation="vertical"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"
                android:orientation="vertical"
                android:padding="5dp">

                <EditText
                    android:id="@+id/secretEditTextCodeDownload"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:autofillHints="7 digit Secret Code"
                    android:background="#FFFFFF"
                    android:ems="10"
                    android:layout_marginBottom="15dp"
                    android:layout_margin="5dp"
                    android:hint="@string/enter_secret_code"
                    android:inputType="textPersonName"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/secretEditTextTotalCandidates"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:autofillHints="7 digit Secret Code"
                    android:background="#FFFFFF"
                    android:layout_marginBottom="15dp"
                    android:ems="10"
                    android:layout_margin="5dp"
                    android:hint="@string/number_of_candidates"
                    android:inputType="textPersonName"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/imageButtonSearch"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@android:color/holo_orange_dark"
                    android:contentDescription="@string/searchwinner"
                    android:onClick="searchVotersDetails"
                    android:text="Search"
                    />

                <TextView
                    android:id="@+id/head"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:background="@android:color/holo_orange_light"
                    android:text="@string/voters_details"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold|italic" />


                <TextView
                    android:id="@+id/textViewVoterDetails"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:textStyle="bold"
                    android:scrollbars="vertical"
                    android:verticalScrollbarPosition="left"
                    android:scrollbarAlwaysDrawVerticalTrack="true"
                    android:textSize="20sp"
                    android:background="@android:color/white"
                    android:textColor="@android:color/black"/>

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <ImageButton
        android:id="@+id/imageButtonDownloadDetails"
        android:layout_width="90dp"
        android:layout_height="83dp"
        android:background="@android:color/holo_orange_dark"
        android:contentDescription="@string/sharewinner"
        android:onClick="downloadVotersDetails"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.713"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.434"
        app:srcCompat="@android:drawable/stat_sys_download" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="90dp"
        android:layout_height="83dp"
        android:layout_marginStart="5dp"
        android:background="@android:color/holo_orange_dark"
        android:contentDescription="@string/importantstar"
        android:onClick="shareCode"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageButtonDownloadDetails"
        app:layout_constraintHorizontal_bias="0.445"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.476"
        app:srcCompat="@android:drawable/ic_menu_share" />

</androidx.constraintlayout.widget.ConstraintLayout>
