<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@android:color/black">

     <Button
         android:id="@+id/buttonHelp"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_margin="35dp"
         android:gravity="center"
         android:padding="2sp"
         android:text="@string/help"
         android:onClick="helping"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="18sp"
         android:textStyle="bold"
         app:backgroundTint="#02f"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.285"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.649" />

     <Button
         android:id="@+id/buttonNext"
         android:layout_width="130dp"
         android:layout_height="50dp"
         android:gravity="center"
         android:padding="2sp"
         android:text="@string/skip_page"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="13sp"
         android:textStyle="bold"
         app:backgroundTint="#02f"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.812" />

     <Button
         android:id="@+id/logOutBtn"
         android:layout_width="130dp"
         android:layout_height="50dp"
         android:gravity="center"
         android:onClick="logout"
         android:padding="2sp"
         android:text="@string/log_out"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="13sp"
         android:textStyle="bold"
         app:backgroundTint="#02f"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.82"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.812"
         tools:ignore="UsingOnClickInXml" />

     <ImageView
         android:id="@+id/imageView3"
         android:layout_width="346dp"
         android:layout_height="400dp"
         android:contentDescription="@string/description"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.423"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.06"
         app:srcCompat="@drawable/wood" />

     <ProgressBar
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyle"
         android:layout_width="75dp"
         android:layout_height="60dp"
         android:background="#00FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.532"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonHelp"
         app:layout_constraintVertical_bias="0.768" />

</androidx.constraintlayout.widget.ConstraintLayout>
